--- a/package.json
+++ b/package.json
@@ -15,18 +15,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.4",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.39.0",
     "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "lucide-react": "^0.390.0",
     "next": "^14.2.1",
+    "next-themes": "^0.3.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-spinners": "^0.13.8",
+    "sonner": "^1.5.0",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "unique-names-generator": "^4.7.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
